# AI-vision

./: .gitignore  README.md  mappings.json
backend/: config.py  main.py  requirements.txt
backend/api/: gesture.py  keyboard.py  mappings.py
backend/models/: gesture_model.py  mapping_model.py
backend/services/: ai_loop.py  keyboard_service.py  vision_service.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: GesturePreview.tsx  KeyMappingsEditor.tsx  WebcamViewer.tsx
models/: hand_model.tflite
vision/: CMakeLists.txt  pybind_wrapper.cpp  vision.cpp  vision.h
